clang/test/BSC/Negative/Ownership/RuleCheck/Maple/if_int_owned/if_int_owned.cbs
// RUN: %clang_cc1 -verify %s

void free(void * p);

long * owned test() {
    long b = 0;
    long * owned a;
    a = (long * owned)&b;
    return a;
}

int main() {
    const long * owned a = test();
    if (a != 0) {
        free((void *)(void * owned)a);
        return 1;
    }
    return 0; // expected-error {{memory leak of value: `a`}}
}